--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,15 @@
         <hr>
         <nav>
           <a href="/">about</a>
-          <a href="/">research</a>
           <a href="/publications">publications</a>
           <a href="/">blog</a>
         </nav>
       </header>
       {% block content %} {% endblock %}
     </div>
+    <footer>
+      Copyright (c) Arthur Correnson
+    </footer>
   </section>
 </body>
 
