--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="H2m1p9gqVOPWmA-m9rO89kSOZO0GHOX_Lq0WTKZ0uUg" />
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Arthur Correnson</title>
 </head>
 
