--- a/templates/publications.html
+++ b/templates/publications.html
@@ -45,7 +45,7 @@
   <p class="paper_location">ICFP Student Research Competition, September 2022, Ljubljana, Slovenia</p>
   <p class="paper_award">First Prize in the graduate category</p>
   <nav>
-    <a class="paper_widget" href="./pdf/ICFP22_poster.pdf">pdf</a>
+    <a class="paper_widget" href="/pdf/ICFP22_poster.pdf">pdf</a>
   </nav>
 </div>
 
