--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,12 @@
     </ul>
   </div>
   <p>
-    I am a graduate student at <a href="">Saarland University</a> and at <a href="">ENS Rennes</a>. My current
-    research focuses on the formal proof of automated verification tools using the Coq proof assistant.
+    I am a PhD student at <a href="">Saarland University</a> under the supervision of <a href="Bernd Finkbeiner
+    ">Bernd Finkbeiner</a>.
+    My current research focuses on the formal verification of static analyzers and compilers using the Coq proof
+    assistant.
     More generally, I am interested in all aspects of programming languages, formal verification, and making formal
-    methods
-    more accessible to a wider audience.
+    methods more accessible to a wider audience.
   </p>
   <h3>Other Research Interests</h3>
   <ul>
@@ -25,10 +26,17 @@
     <li>Formalization of floating-point arithmetic</li>
     <li>Quantum computing</li>
   </ul>
+  <h3>Teaching</h3>
+  <ul>
+    <li>(2022-2023) teaching assistant for <a href="https://cms.cispa.saarland/agv22/">Automata, Games and
+        Verification</a></li>
+    <li>(2021-2022) tutor for <a href="https://rg1-teaching.mpi-inf.mpg.de/autrea-ws21/">Automated Reasoning</a></li>
+  </ul>
+
   <h3>Professional Activities</h3>
   <p>
-    I am an employee at <a href="https://www.absint.com/index.htm">AbsInt GmbH</a> working on the <a
-      href="https://compcert.org/">CompCert</a> compiler.
+    From 2022 to 2023, I was an employee at <a href="https://www.absint.com/index.htm">AbsInt GmbH</a> working on
+    the <a href="https://compcert.org/">CompCert</a> compiler.
   </p>
   <h3>Other Activities</h3>
   <p>
