--- a/templates/publications.html
+++ b/templates/publications.html
@@ -19,6 +19,17 @@
   </nav>
 </div>
 
+<div class="paper">
+  <h4 class="paper_title">Comment dompter un troupeau de flottants sauvages ?</h4>
+  <p>Arthur Correnson</p>
+  <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Saint-Médard-d'Excideuil,
+    France</p>
+  <nav>
+    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/">web</a>
+    <!-- <a class="paper_widget" href="https://hal.inria.fr/hal-03626792/document">pdf</a> -->
+  </nav>
+</div>
+
 <!-- <div class="paper">
   <h4 class="paper_title">(DRAFT) Comment dompter un troupeau de flottants sauvages ?</h4>
   <p>Arthur Correnson</p>
@@ -37,7 +48,7 @@
   </nav>
 </div> -->
 
-<h3 class="type_publi">Posters</h3>
+<h3 class="type_publi">Posters, Talks and Demonstrations</h3>
 
 <div class="paper">
   <h4 class="paper_title">Formal Verification of a Lazy Abstraction Model Checker</h4>
@@ -46,6 +57,27 @@
   <p class="paper_award">First Prize in the graduate category</p>
   <nav>
     <a class="paper_widget" href="/pdf/ICFP22_poster.pdf">pdf</a>
+  </nav>
+</div>
+
+<div class="paper">
+  <h4 class="paper_title">(DEMO) Goose : an OCaml environment for Quantum Computing</h4>
+  <p>Denis Carnier, Arthur Correnson, Christopher McNally, Youssef Moawad</p>
+  <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Saint-Médard-d'Excideuil,
+    France</p>
+  <nav>
+    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/">web</a>
+    <!-- <a class="paper_widget" href="">slides</a> -->
+  </nav>
+</div>
+
+<div class="paper">
+  <h4 class="paper_title">(TALK) What Do Relational Properties Have to Say About Legal Expert Systems?</h4>
+  <p>Arthur Correnson</p>
+  <p class="paper_location">Workshop on Programming Languages and the Law @ POPL 2023</p>
+  <nav>
+    <a class="paper_widget" href="https://popl23.sigplan.org/home/prolala-2023#">web</a>
+    <!-- <a class="paper_widget" href="">slides</a> -->
   </nav>
 </div>
 
