--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,28 @@
     </ul>
   </div>
   <p>
-    I am a PhD student at <a href="">Saarland University</a> under the supervision of <a href="Bernd Finkbeiner
-    ">Bernd Finkbeiner</a>.
+    I am a PhD student at <a
+      href="https://www.google.com/search?client=safari&rls=en&q=CISPA&ie=UTF-8&oe=UTF-8">CISPA</a> and <a
+      href="">Saarland University</a> under the supervision of <a
+      href="https://www.react.uni-saarland.de/people/finkbeiner.html">Bernd Finkbeiner</a>.
     My current research focuses on the formal verification of static analyzers and compilers using the Coq proof
     assistant.
-    More generally, I am interested in all aspects of programming languages, formal verification, and making formal
-    methods more accessible to a wider audience.
+    More generally, I am interested in all aspects of programming languages and formal verification.
   </p>
-  <h3>Other Research Interests</h3>
+
+  <h3>Exciting news!</h3>
+
+  <div id="news">
+    <div class="news_item">
+      <div class="news_date">April 2023</div>
+      <div>
+        I am co-advising the bachelor thesis of Iona Kuhn on the formalization of omega regular
+        expressions in Coq
+      </div>
+    </div>
+  </div>
+
+  <h3>Research Interests</h3>
   <ul>
     <li>Formally verified compilation/static analysis</li>
     <li>Certified constraint solvers</li>
@@ -33,14 +47,14 @@
     <li>(2021-2022) tutor for <a href="https://rg1-teaching.mpi-inf.mpg.de/autrea-ws21/">Automated Reasoning</a></li>
   </ul>
 
-  <h3>Professional Activities</h3>
+  <h3>Experiences in the Industry</h3>
   <p>
     From 2022 to 2023, I was an employee at <a href="https://www.absint.com/index.htm">AbsInt GmbH</a> working on
     the <a href="https://compcert.org/">CompCert</a> compiler.
   </p>
   <h3>Other Activities</h3>
   <p>
-    Aside from research and studies, I dedicate most of my free-time to the popularization of theoretical computer
+    Aside from research and studies, I dedicate my free-time to the popularization of theoretical computer
     science. I co-founded the student organization <em>CodeAnon</em> that organises conferences, tutorials and workshops
     for undergrad students at <a href="">University Toulouse III</a>.
   </p>
