--- a/templates/publications.html
+++ b/templates/publications.html
@@ -13,7 +13,7 @@
   <p class="paper_location">33èmes Journées Francophones des Langages Applicatifs, Jun 2022, Saint-Médard-d'Excideuil,
     France</p>
   <nav>
-    <a class="paper_widget" href="https://hal.inria.fr/hal-03626792">web</a>
+    <a class="paper_widget" href="https://hal.inria.fr/hal-03626792">hal</a>
     <a class="paper_widget" href="https://hal.inria.fr/hal-03626792/document">pdf</a>
     <!-- <a class="paper_widget" href="">slides</a> -->
   </nav>
@@ -25,28 +25,11 @@
   <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Saint-Médard-d'Excideuil,
     France</p>
   <nav>
-    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/">web</a>
-    <!-- <a class="paper_widget" href="https://hal.inria.fr/hal-03626792/document">pdf</a> -->
+    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936872">hal</a>
+    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936872/document">pdf</a>
+    <a class="paper_widget" href="/pdf/slides_jfla_2023_float.pdf">slides</a>
   </nav>
 </div>
-
-<!-- <div class="paper">
-  <h4 class="paper_title">(DRAFT) Comment dompter un troupeau de flottants sauvages ?</h4>
-  <p>Arthur Correnson</p>
-  <nav>
-    <a class="paper_widget" href="">pdf</a>
-    <a class="paper_widget" href="">slides</a>
-  </nav>
-</div>
-
-<div class="paper">
-  <h4 class="paper_title">(DRAFT) Goose : an OCaml environment for Quantum Computing</h4>
-  <p>Denis Carnier, Arthur Correnson, Christopher McNally, Youssef Moawad</p>
-  <nav>
-    <a class="paper_widget" href="">pdf</a>
-    <a class="paper_widget" href="">slides</a>
-  </nav>
-</div> -->
 
 <h3 class="type_publi">Posters, Talks and Demonstrations</h3>
 
@@ -66,8 +49,9 @@
   <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Saint-Médard-d'Excideuil,
     France</p>
   <nav>
-    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/">web</a>
-    <!-- <a class="paper_widget" href="">slides</a> -->
+    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936876">hal</a>
+    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936876/document">pdf</a>
+    <a class="paper_widget" href="/pdf/slides_jfla_2023_goose.pdf">slides</a>
   </nav>
 </div>
 
@@ -77,7 +61,7 @@
   <p class="paper_location">Workshop on Programming Languages and the Law @ POPL 2023</p>
   <nav>
     <a class="paper_widget" href="https://popl23.sigplan.org/home/prolala-2023#">web</a>
-    <!-- <a class="paper_widget" href="">slides</a> -->
+    <a class="paper_widget" href="/pdf/prolala_2023.pdf">slides</a>
   </nav>
 </div>
 
