--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <div class="contact">
     <img src="./me.png" alt="A picture of Arthur Correnson">
     <ul>
-      <li><em>Email</em> : <a href="mailto:arthur.correnson@ens-rennes.fr">arthur.correnson@ens-rennes.fr</a></li>
+      <li><em>Email</em> : <a href="mailto:arthur.correnson@cispa.de">arthur.correnson@cispa.de</a></li>
       <li><em>GitHub</em> : <a href="https://github.com/acorrenson">acorrenson</a></li>
       <li><em>LinkedIn</em> : <a href="https://www.linkedin.com/in/arthur-correnson-b17ab9146">Arthur Correnson</a></li>
     </ul>
@@ -40,12 +40,22 @@
     <li>Formalization of floating-point arithmetic</li>
     <li>Quantum computing</li>
   </ul>
+
   <h3>Teaching</h3>
   <ul>
-    <li>(2022-2023) teaching assistant for <a href="https://cms.cispa.saarland/agv22/">Automata, Games and
+    <li>(2023) Teaching Assistant for the seminar <a href="https://cms.cispa.saarland/hyper_23/">Hyper Properties</a>
+    </li>
+    <li>(2022-2023) Teaching Assistant for the lecture <a href="https://cms.cispa.saarland/agv22/">Automata, Games and
         Verification</a></li>
-    <li>(2021-2022) tutor for <a href="https://rg1-teaching.mpi-inf.mpg.de/autrea-ws21/">Automated Reasoning</a></li>
+    <li>(2021-2022) Tutor for the lecture <a href="https://rg1-teaching.mpi-inf.mpg.de/autrea-ws21/">Automated
+        Reasoning</a></li>
   </ul>
+
+  <h3>Service</h3>
+  <ul>
+    <li>(2023) ICFP Artifact Evaluation Committee</li>
+  </ul>
+
 
   <h3>Experiences in the Industry</h3>
   <p>
