--- a/templates/publications.html
+++ b/templates/publications.html
@@ -8,6 +8,17 @@
 <h3 class="type_publi">Conferences</h3>
 
 <div class="paper">
+  <h4 class="paper_title">Engineering a Formally Verified Automated Bug Finder</h4>
+  <p>Arthur Correnson, Dominic Steinhoefel</p>
+  <p class="paper_location">To appear at ESEC/FSE</p>
+  <nav>
+    <!-- <a class="paper_widget" href="https://hal.inria.fr/hal-03626792">hal</a> -->
+    <a class="paper_widget" href="https://arxiv.org/abs/2305.05570">arxiv</a>
+    <!-- <a class="paper_widget" href="">slides</a> -->
+  </nav>
+</div>
+
+<div class="paper">
   <h4 class="paper_title">Un Coq apprend à un bébé Colibri à flotter</h4>
   <p>Arthur Correnson, François Bobot</p>
   <p class="paper_location">33èmes Journées Francophones des Langages Applicatifs, Jun 2022, Saint-Médard-d'Excideuil,
