--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <nav>
           <a href="/">about</a>
           <a href="/publications">publications</a>
-          <a href="/">blog</a>
+          <a href="/#teaching">teaching</a>
         </nav>
       </header>
       {% block content %} {% endblock %}
