--- a/templates/publications.html
+++ b/templates/publications.html
@@ -33,7 +33,7 @@
 <div class="paper">
   <h4 class="paper_title">Comment dompter un troupeau de flottants sauvages ?</h4>
   <p>Arthur Correnson</p>
-  <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Saint-Médard-d'Excideuil,
+  <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Praz-sur-Arly,
     France</p>
   <nav>
     <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936872">hal</a>
@@ -57,7 +57,7 @@
 <div class="paper">
   <h4 class="paper_title">(DEMO) Goose : an OCaml environment for Quantum Computing</h4>
   <p>Denis Carnier, Arthur Correnson, Christopher McNally, Youssef Moawad</p>
-  <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Saint-Médard-d'Excideuil,
+  <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Praz-sur-Arly,
     France</p>
   <nav>
     <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936876">hal</a>
