--- a/templates/index.html
+++ b/templates/index.html
@@ -3,46 +3,64 @@
 {% block content %}
 <article>
   <h2>About Me</h2>
-  <div class="contact">
-    <img src="./me.png" alt="A picture of Arthur Correnson">
-    <ul>
-      <li><em>Email</em> : <a href="mailto:arthur.correnson@cispa.de">arthur.correnson@cispa.de</a></li>
-      <li><em>GitHub</em> : <a href="https://github.com/acorrenson">acorrenson</a></li>
-      <li><em>LinkedIn</em> : <a href="https://www.linkedin.com/in/arthur-correnson-b17ab9146">Arthur Correnson</a></li>
-    </ul>
-  </div>
-  <p>
-    I am a PhD student at <a
-      href="https://www.google.com/search?client=safari&rls=en&q=CISPA&ie=UTF-8&oe=UTF-8">CISPA</a> and <a
-      href="">Saarland University</a> under the supervision of <a
-      href="https://www.react.uni-saarland.de/people/finkbeiner.html">Bernd Finkbeiner</a>.
-    My current research focuses on the formal verification of static analyzers and compilers using the Coq proof
-    assistant.
-    More generally, I am interested in all aspects of programming languages and formal verification.
-  </p>
 
-  <h3>Exciting news!</h3>
+  <div id="intro">
+    <div id="image">
+      <img src="./me.png" alt="A picture of Arthur Correnson">
+    </div>
+    <div id="bio">
+      <p>
+        I am a PhD student at <a
+          href="https://www.google.com/search?client=safari&rls=en&q=CISPA&ie=UTF-8&oe=UTF-8">CISPA</a>
+        under the supervision of <a href="https://www.react.uni-saarland.de/people/finkbeiner.html">Bernd
+          Finkbeiner</a>.
+        My research focuses on formal verification using interactive proof assistants (especially <a
+          href="https://coq.inria.fr">Coq</a>, which is
+        my
+        favorite proof assistant). In particular, I am interested in proving the correctness of critical tools such as
+        compilers,
+        static analyzers, automated provers etc. More generally, I am curious about pretty much everything related to
+        programming languages and verification (semantics, logic, category theory, ...).
+      </p>
+      <p>
+        Feel free to send me an email for any question related to my research!
+        I'm also very happy to discuss any research oriented project, especially if it involves proving stuff!
+      </p>
+      <ul>
+        <li><em>Email</em> : <a href="mailto:arthur.correnson@cispa.de">arthur.correnson@cispa.de</a></li>
+        <li><em>GitHub</em> : <a href="https://github.com/acorrenson">acorrenson</a></li>
+        <li><em>LinkedIn</em> : <a href="https://www.linkedin.com/in/arthur-correnson-b17ab9146">Arthur
+            Correnson</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <h2>Exciting news!</h2>
 
   <div id="news">
-    <div class="news_item">
+    <ul>
+      <li>(2023) I am advising the bachelor thesis of Iona Kuhn on the formalization of omega regular expressions in Coq
+      </li>
+      <li>(2022) I was honored to win ICFP Student Research Competition in the graduate category
+      </li>
+    </ul>
+    <!-- <div class="news_item">
       <div class="news_date">April 2023</div>
       <div>
         I am co-advising the bachelor thesis of Iona Kuhn on the formalization of omega regular
         expressions in Coq
       </div>
-    </div>
+    </div> -->
   </div>
 
-  <h3>Research Interests</h3>
-  <ul>
-    <li>Formally verified compilation/static analysis</li>
-    <li>Certified constraint solvers</li>
-    <li>Formalization of floating-point arithmetic</li>
-    <li>Quantum computing</li>
-  </ul>
+  <a id="teaching"></a>
+  <h2>Teaching</h2>
 
-  <h3>Teaching</h3>
+  I really enjoy teaching ! I have been involved in many lectures and courses at Saarland University.
+
   <ul>
+    <!-- <li>(2023) Teaching Assistant for the lecture <a href="https://cms.cispa.saarland/hyper_23/">Verification</a> -->
     <li>(2023) Teaching Assistant for the seminar <a href="https://cms.cispa.saarland/hyper_23/">Hyper Properties</a>
     </li>
     <li>(2022-2023) Teaching Assistant for the lecture <a href="https://cms.cispa.saarland/agv22/">Automata, Games and
@@ -51,25 +69,41 @@
         Reasoning</a></li>
   </ul>
 
-  <h3>Service</h3>
+  <h2>Service</h2>
   <ul>
+    <li>(2023) ATVA Subreviewer</li>
     <li>(2023) ICFP Artifact Evaluation Committee</li>
+    <li>(2022) ICFP Student Volunteer</li>
   </ul>
 
 
-  <h3>Experiences in the Industry</h3>
-  <p>
-    From 2022 to 2023, I was an employee at <a href="https://www.absint.com/index.htm">AbsInt GmbH</a> working on
-    the <a href="https://compcert.org/">CompCert</a> compiler.
-  </p>
-  <h3>Other Activities</h3>
+  <h2>Experiences in academia and in the industry</h2>
+
+  <ul>
+    <li>(2022-2023) Part time employee at <a href="https://www.absint.com/index.htm">AbsInt GmbH</a>.
+      <br>
+      Proof engineering for the <a href="https://compcert.org/">CompCert</a> compiler
+    </li>
+    <li>(Summer 2021) Intern at <a href="https://list.cea.fr/en/">CEA</a>, Software Safety & Security Lab.
+      <br>
+      Formal verification of constraint propagators for floating point arithmetic
+    </li>
+    <li>(Summer 2019) Intern at <a href="https://www.inria.fr/en/dyliss">INRIA</a> in the team DYLISS.
+      <br>
+      Implementation of algorithms for the alignment of biological sequences
+    </li>
+  </ul>
+
+
+  <h2>Other Activities</h2>
+
   <p>
     Aside from research and studies, I dedicate my free-time to the popularization of theoretical computer
     science. I co-founded the student organization <em>CodeAnon</em> that organises conferences, tutorials and workshops
     for undergrad students at <a href="">University Toulouse III</a>.
   </p>
 
-  <h3>Awards</h3>
+  <h2>Awards</h2>
 
   I was deeply honored to receive the first prize of <a
     href="https://icfp22.sigplan.org/track/icfp-2022-student-research-competition?">ICFP Student Research Competition
