--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     </div>
     <div id="bio">
       <p>
-        I am a PhD student at <a
+        I am a PhD candidate at <a
           href="https://www.google.com/search?client=safari&rls=en&q=CISPA&ie=UTF-8&oe=UTF-8">CISPA</a>
         under the supervision of <a href="https://www.react.uni-saarland.de/people/finkbeiner.html">Bernd
           Finkbeiner</a>.
@@ -40,7 +40,13 @@
 
   <div id="news">
     <ul>
-      <li>(2023) I am advising the bachelor thesis of Iona Kuhn on the formalization of omega regular expressions in Coq
+      <li>(2023) I will be at <a href="https://2023.esec-fse.org">ESEC/FSE</a> in San Fransisco to present my work on
+        the formal
+        verification of automated bug
+        finders
+      </li>
+      <li>(2023) I am advising the bachelor thesis of Iona Kuhn on the Coq formalization of algorithms for omega regular
+        expressions
       </li>
       <li>(2022) I was honored to win ICFP Student Research Competition in the graduate category
       </li>
@@ -57,10 +63,11 @@
   <a id="teaching"></a>
   <h2>Teaching</h2>
 
-  I really enjoy teaching ! I have been involved in many lectures and courses at Saarland University.
+  I truly enjoy teaching! I have been involved in the organization of many lectures at Saarland
+  University.
 
   <ul>
-    <!-- <li>(2023) Teaching Assistant for the lecture <a href="https://cms.cispa.saarland/hyper_23/">Verification</a> -->
+    <li>(2023-2024) Teaching Assistant for the lecture <a href="https://cms.cispa.saarland/ver2324/">Verification</a>
     <li>(2023) Teaching Assistant for the seminar <a href="https://cms.cispa.saarland/hyper_23/">Hyper Properties</a>
     </li>
     <li>(2022-2023) Teaching Assistant for the lecture <a href="https://cms.cispa.saarland/agv22/">Automata, Games and
@@ -71,13 +78,16 @@
 
   <h2>Service</h2>
   <ul>
+    <li>(2024) POPL Student Volunteer</li>
+    <li>(2023) TACAS Subreviewer</li>
+    <li>(2023) DATE Subreviewer</li>
     <li>(2023) ATVA Subreviewer</li>
     <li>(2023) ICFP Artifact Evaluation Committee</li>
     <li>(2022) ICFP Student Volunteer</li>
   </ul>
 
 
-  <h2>Experiences in academia and in the industry</h2>
+  <h2>Experiences in academia and in industry</h2>
 
   <ul>
     <li>(2022-2023) Part time employee at <a href="https://www.absint.com/index.htm">AbsInt GmbH</a>.
@@ -94,6 +104,13 @@
     </li>
   </ul>
 
+  <h2>Awards</h2>
+
+  <ul>
+    <li>Best artifact awards at ESEC\FSE 2023 for the paper <em>Engineering a Formally Verified Automated Bug
+        Finder</em></li>
+    <li>First prize of ICFP-SRC 2022 for my work <em>Formal Verification of a Lazy Abstraction Model Checker</em></li>
+  </ul>
 
   <h2>Other Activities</h2>
 
@@ -103,13 +120,6 @@
     for undergrad students at <a href="">University Toulouse III</a>.
   </p>
 
-  <h2>Awards</h2>
 
-  I was deeply honored to receive the first prize of <a
-    href="https://icfp22.sigplan.org/track/icfp-2022-student-research-competition?">ICFP Student Research Competition
-    2022</a> in the
-  graduate category.
-  I received this award for my work on the <em>Formal Verification of a Lazy Abstraction Model Checker</em> supervised
-  by <a href="https://www.react.uni-saarland.de/people/finkbeiner.html">Bernd Finkbeiner</a>.
 </article>
 {% endblock content %}
