--- a/templates/publications.html
+++ b/templates/publications.html
@@ -8,21 +8,51 @@
 <h3 class="type_publi">Conferences</h3>
 
 <div class="paper">
+  <h4 class="paper_title">A la recherche de tous les vrais bugs</h4>
+  <h4 class="paper_title"><i>Searching for all the true bugs (translated)</i></h4>
+  <p>Arthur Correnson</p>
+  <p class="paper_location">JFLA 2024</p>
+  <!-- <p class="paper_location">35èmes Journées Francophones des Langages Applicatifs, Feb 2023, Saint-Jacut-de-la-Mer,
+    France</p> -->
+  <nav>
+    <a class="paper_widget" href="https://hal.science/hal-04407133/">hal</a>
+  </nav>
+</div>
+
+<div class="paper">
   <h4 class="paper_title">Engineering a Formally Verified Automated Bug Finder</h4>
   <p>Arthur Correnson, Dominic Steinhoefel</p>
-  <p class="paper_location">To appear at ESEC/FSE</p>
+  <p class="paper_location">ESEC/FSE 2023</p>
+  <p class="paper_award">Best Artifact Awards</p>
   <nav>
     <!-- <a class="paper_widget" href="https://hal.inria.fr/hal-03626792">hal</a> -->
     <a class="paper_widget" href="https://arxiv.org/abs/2305.05570">arxiv</a>
+    <a class="paper_widget" href="https://dl.acm.org/doi/10.1145/3611643.3616290">acm</a>
     <!-- <a class="paper_widget" href="">slides</a> -->
   </nav>
 </div>
 
 <div class="paper">
+  <h4 class="paper_title">Comment dompter un troupeau de flottants sauvages ?</h4>
+  <h4 class="paper_title"><i>How to tame a herd of floating points (translated)</i></h4>
+  <p>Arthur Correnson</p>
+  <p class="paper_location">JFLA 2023</p>
+  <!-- <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Praz-sur-Arly,
+    France</p> -->
+  <nav>
+    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936872">hal</a>
+    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936872/document">pdf</a>
+    <a class="paper_widget" href="/pdf/slides_jfla_2023_float.pdf">slides</a>
+  </nav>
+</div>
+
+<div class="paper">
   <h4 class="paper_title">Un Coq apprend à un bébé Colibri à flotter</h4>
+  <h4 class="paper_title"><i>A rooster teaches a colibri how to float (translated)</i></h4>
   <p>Arthur Correnson, François Bobot</p>
-  <p class="paper_location">33èmes Journées Francophones des Langages Applicatifs, Jun 2022, Saint-Médard-d'Excideuil,
-    France</p>
+  <p class="paper_location">JFLA 2022</p>
+  <!-- <p class="paper_location">33èmes Journées Francophones des Langages Applicatifs, Jun 2022, Saint-Médard-d'Excideuil,
+    France</p> -->
   <nav>
     <a class="paper_widget" href="https://hal.inria.fr/hal-03626792">hal</a>
     <a class="paper_widget" href="https://hal.inria.fr/hal-03626792/document">pdf</a>
@@ -30,17 +60,7 @@
   </nav>
 </div>
 
-<div class="paper">
-  <h4 class="paper_title">Comment dompter un troupeau de flottants sauvages ?</h4>
-  <p>Arthur Correnson</p>
-  <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Praz-sur-Arly,
-    France</p>
-  <nav>
-    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936872">hal</a>
-    <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936872/document">pdf</a>
-    <a class="paper_widget" href="/pdf/slides_jfla_2023_float.pdf">slides</a>
-  </nav>
-</div>
+
 
 <h3 class="type_publi">Posters, Talks and Demonstrations</h3>
 
@@ -57,8 +77,9 @@
 <div class="paper">
   <h4 class="paper_title">(DEMO) Goose : an OCaml environment for Quantum Computing</h4>
   <p>Denis Carnier, Arthur Correnson, Christopher McNally, Youssef Moawad</p>
-  <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Praz-sur-Arly,
-    France</p>
+  <p class="paper_location">JFLA 2023</p>
+  <!-- <p class="paper_location">34èmes Journées Francophones des Langages Applicatifs, Feb 2023, Praz-sur-Arly,
+    France</p> -->
   <nav>
     <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936876">hal</a>
     <a class="paper_widget" href="https://hal.inria.fr/JFLA2023/hal-03936876/document">pdf</a>
