--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,11 @@
           href="https://www.google.com/search?client=safari&rls=en&q=CISPA&ie=UTF-8&oe=UTF-8">CISPA</a>
         under the supervision of <a href="https://www.react.uni-saarland.de/people/finkbeiner.html">Bernd
           Finkbeiner</a>.
-        My research focuses on formal verification using interactive proof assistants (especially <a
-          href="https://coq.inria.fr">Coq</a>, which is
-        my
-        favorite proof assistant). In particular, I am interested in proving the correctness of critical tools such as
-        compilers,
-        static analyzers, automated provers etc. More generally, I am curious about pretty much everything related to
-        programming languages and verification (semantics, logic, category theory, ...).
+        My research focuses on trustworthy formal verification based on interactive proof assistants (especially <a
+          href="https://coq.inria.fr">Coq</a>), with applications to trustworthy compilation of floating points,
+        trustworthy model-checking, and trustworthy automated bug finding.
+        More recently, I have been working on using proof assistants to verify hyperproperties of programs in the
+        context of the ERC advanced grant <a href="https://cispa.de/en/erc-grant-hyper">HYPER</a>.
       </p>
       <p>
         Feel free to send me an email for any question related to my research!
