--- a/templates/publications.html
+++ b/templates/publications.html
@@ -60,19 +60,39 @@
   </nav>
 </div>
 
-
-
-<h3 class="type_publi">Posters, Talks and Demonstrations</h3>
+<h3 class="type_publi">Workshops</h3>
 
 <div class="paper">
-  <h4 class="paper_title">Formal Verification of a Lazy Abstraction Model Checker</h4>
-  <p>Arthur Correnson</p>
-  <p class="paper_location">ICFP Student Research Competition, September 2022, Ljubljana, Slovenia</p>
-  <p class="paper_award">First Prize in the graduate category</p>
+  <h4 class="paper_title">Automated Hyperbug Finding</h4>
+  <p>Arthur Correnson, Tobias Niessen, Bernd Finkbeiner, Georg Weissenbacher</p>
+  <p class="paper_location">Workshop on Hyperproperties: Advances in Theory and Practice @ CAV 2024</p>
   <nav>
-    <a class="paper_widget" href="/pdf/ICFP22_poster.pdf">pdf</a>
+    <a class="paper_widget" href="https://hyperworkshop24.cispa.io/#program">web</a>
+    <!-- <a class="paper_widget" href="/pdf/hyper_2024.pdf">slides</a> -->
   </nav>
 </div>
+
+<div class="paper">
+  <h4 class="paper_title">Symbolic Bug Finding for Asynchronous Hyperproperties</h4>
+  <p>Arthur Correnson, Tobias Niessen, Bernd Finkbeiner, Georg Weissenbacher</p>
+  <p class="paper_location">Asynchronous Hyperproperties: From Theory to Practice (Vienna, 2024)</p>
+  <nav>
+    <a class="paper_widget" href="https://ahyper.github.io/ahyper24/program/">web</a>
+    <!-- <a class="paper_widget" href="/pdf/ahyper_2024.pdf">slides</a> -->
+  </nav>
+</div>
+
+<div class="paper">
+  <h4 class="paper_title">What Do Relational Properties Have to Say About Legal Expert Systems?</h4>
+  <p>Arthur Correnson</p>
+  <p class="paper_location">Workshop on Programming Languages and the Law @ POPL 2023</p>
+  <nav>
+    <a class="paper_widget" href="https://popl23.sigplan.org/home/prolala-2023#">web</a>
+    <a class="paper_widget" href="/pdf/prolala_2023.pdf">slides</a>
+  </nav>
+</div>
+
+<h3 class="type_publi">Posters, Talks and Demonstrations</h3>
 
 <div class="paper">
   <h4 class="paper_title">(DEMO) Goose : an OCaml environment for Quantum Computing</h4>
@@ -88,13 +108,15 @@
 </div>
 
 <div class="paper">
-  <h4 class="paper_title">(TALK) What Do Relational Properties Have to Say About Legal Expert Systems?</h4>
+  <h4 class="paper_title">Formal Verification of a Lazy Abstraction Model Checker</h4>
   <p>Arthur Correnson</p>
-  <p class="paper_location">Workshop on Programming Languages and the Law @ POPL 2023</p>
+  <p class="paper_location">ICFP Student Research Competition, September 2022, Ljubljana, Slovenia</p>
+  <p class="paper_award">First Prize in the graduate category</p>
   <nav>
-    <a class="paper_widget" href="https://popl23.sigplan.org/home/prolala-2023#">web</a>
-    <a class="paper_widget" href="/pdf/prolala_2023.pdf">slides</a>
+    <a class="paper_widget" href="/pdf/ICFP22_poster.pdf">pdf</a>
   </nav>
 </div>
+
+
 
 {% endblock content %}
