--- a/templates/publications.html
+++ b/templates/publications.html
@@ -8,6 +8,15 @@
 <h3 class="type_publi">Conferences</h3>
 
 <div class="paper">
+  <h4 class="paper_title">Coinductive Proofs for Temporal Hyperliveness</h4>
+  <p>Arthur Correnson, Bernd Finkbeiner</p>
+  <p class="paper_location">POPL 2025</p>
+  <!-- <nav>
+    <a class="paper_widget" href="https://dl.acm.org/doi/10.1145/3689761">acm</a>
+  </nav> -->
+</div>
+
+<div class="paper">
   <h4 class="paper_title">Finding ∀∃ Hyperbugs using Symbolic Execution</h4>
   <p>Arthur Correnson, Tobias Niessen, Bernd Finkbeiner, Georg Weissenbacher</p>
   <p class="paper_location">OOPSLA 2024</p>
@@ -21,8 +30,6 @@
   <h4 class="paper_title"><i>Searching for all the true bugs (translated)</i></h4>
   <p>Arthur Correnson</p>
   <p class="paper_location">JFLA 2024</p>
-  <!-- <p class="paper_location">35èmes Journées Francophones des Langages Applicatifs, Feb 2023, Saint-Jacut-de-la-Mer,
-    France</p> -->
   <nav>
     <a class="paper_widget" href="https://hal.science/hal-04407133/">hal</a>
   </nav>
