--- a/templates/index.html
+++ b/templates/index.html
@@ -6,23 +6,24 @@
 
   <div id="intro">
     <div id="image">
-      <img src="./me.png" alt="A picture of Arthur Correnson">
+      <img src="./me2.png" alt="A picture of Arthur Correnson">
     </div>
     <div id="bio">
       <p>
         I am a PhD candidate at <a
           href="https://www.google.com/search?client=safari&rls=en&q=CISPA&ie=UTF-8&oe=UTF-8">CISPA</a>
-        under the supervision of <a href="https://www.react.uni-saarland.de/people/finkbeiner.html">Bernd
+        under the supervision of <a href="https://www.react.uni-saarland.de/people/finkbeiner.html">Prof. Bernd
           Finkbeiner</a>.
         My research focuses on trustworthy formal verification based on interactive proof assistants (especially <a
-          href="https://coq.inria.fr">Coq</a>), with applications to trustworthy compilation of floating points,
-        trustworthy model-checking, and trustworthy automated bug finding.
-        More recently, I have been working on using proof assistants to verify hyperproperties of programs in the
-        context of the ERC advanced grant <a href="https://cispa.de/en/erc-grant-hyper">HYPER</a>.
+          href="https://coq.inria.fr">Coq</a>), with applications to security, compilation,
+        model-checking, and automated bug finding.
+        More recently, I have been working on using interactive proof assistants to verify hyperproperties of programs
+        in the context of the ERC advanced grant <a href="https://cispa.de/en/erc-grant-hyper">HYPER</a>.
       </p>
       <p>
         Feel free to send me an email for any question related to my research!
-        I'm also very happy to discuss any research oriented project, especially if it involves proving stuff!
+        I am also very happy to discuss any research oriented project, especially if it involves proofs or programming
+        languages!
       </p>
       <ul>
         <li><em>Email</em> : <a href="mailto:arthur.correnson@cispa.de">arthur.correnson@cispa.de</a></li>
@@ -34,13 +35,15 @@
     </div>
   </div>
 
-  <a id="teaching"></a>
+  <a name="teaching"></a>
   <h2>Teaching</h2>
 
   I truly enjoy teaching! I have been involved in the organization of many lectures at Saarland
   University.
 
   <ul>
+    <li>(2025) Co-lecturing the advanced lecture <a href="https://cms.cispa.saarland/proofs/">Coinductive
+        Proofs</a>
     <li>(2023-2024) Teaching Assistant for the lecture <a href="https://cms.cispa.saarland/ver2324/">Verification</a>
     <li>(2023) Teaching Assistant for the seminar <a href="https://cms.cispa.saarland/hyper_23/">Hyper Properties</a>
     </li>
@@ -52,6 +55,7 @@
 
   <h2>Service</h2>
   <ul>
+    <li>(2025) LMCS Reviewer</li>
     <li>(2024) POPL Student Volunteer</li>
     <li>(2023) TACAS Subreviewer</li>
     <li>(2023) DATE Subreviewer</li>
