--- a/templates/publications.html
+++ b/templates/publications.html
@@ -11,9 +11,9 @@
   <h4 class="paper_title">Coinductive Proofs for Temporal Hyperliveness</h4>
   <p>Arthur Correnson, Bernd Finkbeiner</p>
   <p class="paper_location">POPL 2025</p>
-  <!-- <nav>
-    <a class="paper_widget" href="https://dl.acm.org/doi/10.1145/3689761">acm</a>
-  </nav> -->
+  <nav>
+    <a class="paper_widget" href="https://dl.acm.org/doi/10.1145/3704889">acm</a>
+  </nav>
 </div>
 
 <div class="paper">
