--- a/templates/publications.html
+++ b/templates/publications.html
@@ -8,6 +8,24 @@
 <h3 class="type_publi">Conferences</h3>
 
 <div class="paper">
+  <h4 class="paper_title">Almost Fair Simulations</h4>
+  <p>Arthur Correnson, Iona Kuhn, Bernd Finkbeiner</p>
+  <p class="paper_location">ICFP 2025</p>
+  <!-- <nav>
+    <a class="paper_widget" href="https://dl.acm.org/doi/10.1145/3704889">acm</a>
+  </nav> -->
+</div>
+
+<div class="paper">
+  <h4 class="paper_title">An Intermediate Program Representation for Optimizing Stream-Based Languages</h4>
+  <p>Frederik Scheerer, Jan Baumeister, Bernd Finkbeiner, Arthur Correnson</p>
+  <p class="paper_location">CAV 2025</p>
+  <!-- <nav>
+    <a class="paper_widget" href="https://dl.acm.org/doi/10.1145/3704889">acm</a>
+  </nav> -->
+</div>
+
+<div class="paper">
   <h4 class="paper_title">Coinductive Proofs for Temporal Hyperliveness</h4>
   <p>Arthur Correnson, Bernd Finkbeiner</p>
   <p class="paper_location">POPL 2025</p>
