--- a/templates/publications.html
+++ b/templates/publications.html
@@ -94,6 +94,19 @@
   </nav>
 </div>
 
+<h3 class="type_publi">ArXiv</h3>
+
+<div class="paper">
+  <h4 class="paper_title">Pacing Types: Safe Monitoring of Asynchronous Streams</h4>
+  <p>Florian Kohn, Arthur Correnson, Jan Baumeister, Bernd Finkbeiner</p>
+  <p class="paper_location">ArXiv</p>
+  <!-- <p class="paper_location">33èmes Journées Francophones des Langages Applicatifs, Jun 2022, Saint-Médard-d'Excideuil,
+    France</p> -->
+  <nav>
+    <a class="paper_widget" href="https://arxiv.org/abs/2509.06724">ArXiv</a>
+  </nav>
+</div>
+
 <h3 class="type_publi">Workshops</h3>
 
 <div class="paper">
